[gd_scene load_steps=2 format=3 uid="uid://be4kfdgab4wms"]

[ext_resource type="Script" path="res://Scripts/Menus/ConnectionMenu.gd" id="1_jtsqr"]

[node name="ConnectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jtsqr")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="JoiningContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Name" type="LineEdit" parent="HBoxContainer/JoiningContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="HBoxContainer/JoiningContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="HBoxContainer/JoiningContainer"]
layout_mode = 2
text = "Join"

[node name="startButton" type="Button" parent="HBoxContainer/JoiningContainer"]
layout_mode = 2
disabled = true
text = "Start"

[node name="PlayerNameContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[connection signal="text_changed" from="HBoxContainer/JoiningContainer/Name" to="." method="_on_name_text_changed"]
[connection signal="pressed" from="HBoxContainer/JoiningContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="HBoxContainer/JoiningContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="HBoxContainer/JoiningContainer/startButton" to="." method="_on_start_button_pressed"]
